# orders/src/main/java/com/gabriel/orders/adapter/driver/api/OrdersHttpController.java
@@ -1,11 +1,17 @@
 package com.gabriel.orders.adapter.driver.api;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.gabriel.orders.adapter.driver.api.mapper.OrderMapper;
 import com.gabriel.orders.core.application.command.CreateOrderCommand;
+import com.gabriel.orders.core.application.command.ProcessOrderCommand;
 import com.gabriel.orders.core.application.query.GetByTicketOrderQuery;
+import com.gabriel.orders.core.application.query.SearchByOrderStatusQuery;
 import com.gabriel.orders.core.application.usecase.CreateOrderUseCase;
+import com.gabriel.orders.core.application.usecase.ProcessOrderUseCase;
 import com.gabriel.orders.core.application.usecase.RetrieveOrderUseCase;
+import com.gabriel.orders.core.application.usecase.SearchOrderUseCase;
 import com.gabriel.orders.core.domain.model.Order;
+import com.gabriel.orders.core.domain.model.OrderStatus;
 import com.gabriel.specs.orders.OrdersApi;
 import com.gabriel.specs.orders.models.OrderCreated;
 import com.gabriel.specs.orders.models.OrderRequest;
@@ -14,6 +20,7 @@ import com.gabriel.specs.orders.models.OrderStatusDTO;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.List;
 import java.util.Optional;
 
 
@@ -24,14 +31,22 @@ public class OrdersHttpController implements OrdersApi {
 
     private final RetrieveOrderUseCase retrieveOrderUseCase;
 
+    private final ProcessOrderUseCase processOrderUseCase;
+
+    private final SearchOrderUseCase searchOrderUseCase;
+
     public OrdersHttpController(CreateOrderUseCase createOrderUseCase,
-                                RetrieveOrderUseCase retrieveOrderUseCase) {
+                                RetrieveOrderUseCase retrieveOrderUseCase,
+                                ProcessOrderUseCase processOrderUseCase,
+                                SearchOrderUseCase searchOrderUseCase) {
         this.createOrderUseCase = createOrderUseCase;
         this.retrieveOrderUseCase = retrieveOrderUseCase;
+        this.processOrderUseCase = processOrderUseCase;
+        this.searchOrderUseCase = searchOrderUseCase;
     }
 
     @Override
-    public ResponseEntity<OrderCreated> addOrder(OrderRequest orderRequest) {
+    public ResponseEntity<OrderCreated> addOrder(OrderRequest orderRequest) throws JsonProcessingException {
         CreateOrderCommand command = OrderMapper.toCommand(orderRequest);
         Order newOrder = createOrderUseCase.createOrder(command);
         return ResponseEntity.ok(new OrderCreated(newOrder.getTicketId()));
@@ -44,12 +59,18 @@ public class OrdersHttpController implements OrdersApi {
     }
 
     @Override
-    public ResponseEntity<Void> changeOrderStatus(String orderId, String status) {
-        return null;
+    public ResponseEntity<Void> changeOrderStatus(String orderId, OrderStatusDTO status) throws Exception {
+        processOrderUseCase.processOrder(
+            new ProcessOrderCommand(orderId, OrderStatus.valueOf(status.name().toUpperCase())));
+        return ResponseEntity.noContent().build();
     }
 
     @Override
-    public ResponseEntity<OrderResponse> findOrdersByQuery(Optional<OrderStatusDTO> status) {
-        return null;
+    public ResponseEntity<List<OrderResponse>> findOrdersByQuery(Optional<OrderStatusDTO> status) throws Exception {
+        List<Order> orders = searchOrderUseCase.searchBy(
+            new SearchByOrderStatusQuery(
+                status.map(orderStatusDTO -> OrderStatus.valueOf(orderStatusDTO.name().toUpperCase()))
+                    .orElse(null)));
+        return ResponseEntity.ok(OrderMapper.toResponseList(orders));
     }
 }
